# daytona

./: .dockerignore  .env  .env.minimal  .env.production  .env.production.template  .gitignore  .mise.toml  .tool-versions  .versionrc.json  BACKEND_OPTIMIZATION.md  CONTRIBUTING.md  Dockerfile  Dockerfile.backup  MISE_USAGE.md  PACKAGING.md  README.md  RELEASE.md  data_report_20250804_015729.json  dev-quick  dev-summary  docker-compose.prod.yaml  docker-compose.yaml  go.work.sum  mise.toml  nx.json  package.json  project-graph.json  project.json  pyproject.toml  remove_computeruse.py  remove_schemas.py  sandbox_id.txt  tsconfig.base.json
.devcontainer/: .env  Dockerfile  devcontainer.json  docker-compose.yaml  setup-git-proxy.sh  setup-os-env.sh
.devcontainer/dex/: config.yaml
.github/instructions/: nx.instructions.md
.github/workflows/: release.yml
.husky/: pre-commit
apps/api/: .env  Dockerfile  project.json  webpack.config.js
apps/cli/: go.mod  main.go
apps/daemon/: Dockerfile  go.mod  project.json
apps/dashboard/: Dockerfile  tsconfig.app.json
apps/docs/: CONTRIBUTING.md  README.md  astro.config.mjs
apps/proxy/: Dockerfile  go.mod  project.json
apps/runner/: Dockerfile  go.mod  project.json
config/: nginx.conf
config/dex/: config.yaml
config/nginx/: nginx.conf
config/postgres/: init.sql
docker/: DOCUMENTATION_UPDATE_SUMMARY.md  Dockerfile  OPTIMIZATION.md  README.md  build-advanced.sh  build-optimized.sh  docker-compose.build-local.yaml  docker-compose.build.yaml  docker-compose.v1.yaml  docker-compose.v2.yaml  docker-compose.yaml  docker.env
docker/dex/: config.yaml
docker/pgadmin4/: servers.json
docs/: DEPLOYMENT_IMPLEMENTATION_SUMMARY.md  DOCKER_DEPLOYMENT.md  GIT_PROXY_SETUP.md  HOW_TO_DEPLOY.md  HOW_TO_USE_IN_OTHER_PROJECTS.md  MISE_SETUP.md  PLATON_DAYTONA_SETUP.md  PM2.md  README.md  database-migration.md  proxy_settings.md
docs/development/: DinD_network.md  logging.md
examples/jupyter/: daytonab9vzator_nbqa_ipynb.py
examples/python/: example_usage.py
hack/computer-use/: build-computer-use-amd64.sh
images/sandbox/: README.md
k8s/: namespace.yaml
k8s/storage/: pvc.yaml
libs/api-client-go/: api_toolbox.go  go.mod  project.json
libs/api-client-python/: project.json  (+2 more)
libs/api-client-python-async/: project.json  pyproject.toml  setup.py
scripts/: DOCUMENTATION_SUMMARY.md  JS_PATHS_UPDATE_SUMMARY.md  README.md  REORGANIZATION_SUMMARY.md  SCRIPTS_OVERVIEW.md  backup.sh  build-images.ps1  build-images.sh  cleanup-env.py  cleanup.js  copy-file.js  create-xterm-fallback.js  cross-platform.js  demo.sh  deploy.sh  download-xterm.js  get-cpu-count.js  health-check.sh  miscs.md  navigation.sh  nx-with-parallel.js  python-build.js  quick-setup-env.py  quick-start.sh  restore.sh  setup-env.py  setup-git.sh  setup.sh  validate-env.py
scripts/db/: MANIFEST.in  MIGRATION.md  Makefile  PROJECT_OVERVIEW.md  README.md  __init__.py  check_maintenance_config.py  data_maintenance.py  init.py  maintenance_config.env  maintenance_example.py  pyproject.toml  requirements.txt  setup.cfg  version.py
scripts/db/tests/: __init__.py  test_basic.py
(+307 files in other folders)
