[metadata]
name = daytona-db-maintenance
author = Daytona Platforms Inc.
author_email = support@daytona.io
description = Database maintenance tools for Daytona project
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/daytonaio/daytona
project_urls =
    Bug Reports = https://github.com/daytonaio/daytona/issues
    Source = https://github.com/daytonaio/daytona
license = Apache-2.0
license_files = ../../LICENSE
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    Intended Audience :: System Administrators
    Topic :: Database
    Topic :: System :: Systems Administration
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11

[options]
packages = find:
python_requires = >=3.8
include_package_data = True
zip_safe = False

[options.packages.find]
where = .
include = daytona_db_maintenance*

[options.entry_points]
console_scripts =
    daytona-db-maintenance = data_maintenance:main
    daytona-check-maintenance-config = check_maintenance_config:main
    daytona-db-init = init:main

[bdist_wheel]
universal = 1
